// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-limit-text Custom Label 4 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
                aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
                esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatatmollit
                ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                sit sit commodo.
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
                aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
                esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatatmollit
                ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                sit sit commodo.
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Dynamic Text 2 Lines 1`] = `
<div>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Change text 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <div
    class="m-limit-text"
    style="position: relative;"
  >
    <div
      aria-hidden="true"
      class="m-limit-text__original"
    >
      <p>
        Non cillum et mollit excepteur reprehenderit occaecat adipisicing culpa dolore culpa ipsum esse irure id. Cupidatat ut consectetur reprehenderit consectetur occaecat elit tempor sint cupidatat deserunt minim pariatur. Quis irure sunt labore nulla fugiat consequat nulla et aliqua. Excepteur ullamco labore commodo ipsum nisi veniam cillum dolor nulla qui aliqua tempor tempor proident. Sit incididunt sint velit nostrud nisi fugiat consequat nisi amet anim voluptate. Ea qui dolore laborum dolore amet.Irure magna elit et eiusmod consectetur elit incididunt non sit ea. In occaecat adipisicing occaecat laborum labore et sunt velit. Duis laborum aliqua excepteur in ex in. Laboris velit esse incididunt qui mollit velit. Veniam veniam ullamco proident labore. Velit culpa aliqua culpa deserunt et do aute id qui ullamco pariatur consequat velit nostrud.Nostrud quis excepteur est incididunt laborum proident enim. Eu labore eiusmod do incididunt dolore proident deserunt ullamco velit sit do eiusmod. Veniam nisi laborum officia incididunt fugiat. Ut et occaecat sint aliqua enim pariatur et. Exercitation reprehenderit esse aute reprehenderit esse aliquip sint do mollit nulla do reprehenderit est. Minim aliquip nulla velit commodo sint id. Dolore dolore pariatur officia ea adipisicing id quis amet ullamco.Adipisicing sit labore voluptate sit sunt quis. Quis est voluptate aliquip voluptate. Nisi aliquip exercitation ullamco tempor cupidatat. Do eiusmod dolore consectetur pariatur est mollit sit qui id qui culpa adipisicing.Ut ut nisi cupidatat do voluptate nisi mollit amet. Enim laborum minim velit minim sit culpa magna incididunt aute occaecat sit. Laborum officia est proident excepteur. Aute occaecat nisi ad qui mollit nostrud occaecat laborum sit deserunt. Elit aliqua qui deserunt incididunt nisi cillum. Id nulla consequat exercitation ipsum anim mollit nostrud.
      </p>
    </div>
     
    <div
      aria-hidden="true"
      class="m-limit-text__testing-text"
      style="white-space: normal;"
    >
      <p>
        Non cillum et mollit excepteur reprehenderit occaecat adipisicing culpa dolore culpa ipsum esse irure id. Cupidatat ut consectetur reprehenderit consectetur occaecat elit tempor sint cupidatat deserunt minim pariatur. Quis irure sunt labore nulla fugiat consequat nulla et aliqua. Excepteur ullamco labore commodo ipsum nisi veniam cillum dolor nulla qui aliqua tempor tempor proident. Sit incididunt sint velit nostrud nisi fugiat consequat nisi amet anim voluptate. Ea qui dolore laborum dolore amet.Irure magna elit et eiusmod consectetur elit incididunt non sit ea. In occaecat adipisicing occaecat laborum labore et sunt velit. Duis laborum aliqua excepteur in ex in. Laboris velit esse incididunt qui mollit velit. Veniam veniam ullamco proident labore. Velit culpa aliqua culpa deserunt et do aute id qui ullamco pariatur consequat velit nostrud.Nostrud quis excepteur est incididunt laborum proident enim. Eu labore eiusmod do incididunt dolore proident deserunt ullamco velit sit do eiusmod. Veniam nisi laborum officia incididunt fugiat. Ut et occaecat sint aliqua enim pariatur et. Exercitation reprehenderit esse aute reprehenderit esse aliquip sint do mollit nulla do reprehenderit est. Minim aliquip nulla velit commodo sint id. Dolore dolore pariatur officia ea adipisicing id quis amet ullamco.Adipisicing sit labore voluptate sit sunt quis. Quis est voluptate aliquip voluptate. Nisi aliquip exercitation ullamco tempor cupidatat. Do eiusmod dolore consectetur pariatur est mollit sit qui id qui culpa adipisicing.Ut ut nisi cupidatat do voluptate nisi mollit amet. Enim laborum minim velit minim sit culpa magna incididunt aute occaecat sit. Laborum officia est proident excepteur. Aute occaecat nisi ad qui mollit nostrud occaecat laborum sit deserunt. Elit aliqua qui deserunt incididunt nisi cillum. Id nulla consequat exercitation ipsum anim mollit nostrud.
      </p>
    </div>
     
    <div
      class="m-limit-text__content"
      style="display: none;"
    />
     
    <!---->
    <div
      class="resize-sensor"
      dir="ltr"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        class="resize-sensor-expand"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Multi Paragraph 4 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                            ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                            ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                            Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                            nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                            amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
    </p>
     
    <p>
      Eiusmod sint minim eu id consequatesse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse
                    aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum
                    qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation
                    amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo.
                    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                    nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute.
                    Ut est cupidatat
    </p>
     
    <p>
      mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                    occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                    Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                    in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                    ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                    exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                    sit sit commodo.
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                            ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                            ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                            Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                            nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                            amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
    </p>
     
    <p
      style="display: block;"
    >
      Eiusmod sint minim eu id consequatesse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse
                    aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum
                    qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation
                    amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo.
                    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                    nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute.
                    Ut est cupidatat
    </p>
     
    <p
      style="display: block;"
    >
      mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                    occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                    Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                    in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                    ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                    exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                    sit sit commodo.
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Only Text 2 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
    excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
    sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
    do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
    aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
    aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
    est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
    culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
    est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
    ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
    tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
    quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
    sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
    anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
    laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
    Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo.
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
    excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
    sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
    do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
    aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
    aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
    est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
    culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
    est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
    ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
    tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
    quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
    sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
    anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
    laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
    Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo.
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Open With Props 1`] = `
<div>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Toggle open 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <div
    class="m-limit-text"
    style="position: relative;"
  >
    <div
      aria-hidden="true"
      class="m-limit-text__original"
    >
      <p>
        Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                        ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                        ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                        consequat esse veniam. 
        <b>
          Ullamco labore do sit sit commodo.
        </b>
        Deserunt ad amet sint in esse aute. Ut est cupidatat
                        mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa 
        <b>
          voluptate occaecat veniam amet
        </b>
         reprehenderit
                        irure.Culpa laborum ullamco sint quis exercitation 
        <b>
          amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
        </b>
        
                        sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                        dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                        eu id consequat esse veniam.
      </p>
    </div>
     
    <div
      aria-hidden="true"
      class="m-limit-text__testing-text"
      style="white-space: normal;"
    >
      <p>
        Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                        ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                        ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                        consequat esse veniam. 
        <b>
          Ullamco labore do sit sit commodo.
        </b>
        Deserunt ad amet sint in esse aute. Ut est cupidatat
                        mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa 
        <b>
          voluptate occaecat veniam amet
        </b>
         reprehenderit
                        irure.Culpa laborum ullamco sint quis exercitation 
        <b>
          amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
        </b>
        
                        sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                        dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                        eu id consequat esse veniam.
      </p>
    </div>
     
    <div
      class="m-limit-text__content"
      style="display: none;"
    />
     
    <!---->
    <div
      class="resize-sensor"
      dir="ltr"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        class="resize-sensor-expand"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Paragraph And Title 4 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <h4>
      Eiusmod sint minim eu id consequat esse veniam.
    </h4>
     
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id 
    </p>
     
    <h4>
      Eiusmod sint minim eu id consequat esse veniam.
    </h4>
     
    <p>
      Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse
                    aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum
                    qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation
                    amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo.
                    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                    nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute.
                    Ut est cupidatat
    </p>
     
    <p>
      mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                    occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                    Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                    in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                    ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                    exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                    sit sit commodo.
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <h4>
      Eiusmod sint minim eu id consequat esse veniam.
    </h4>
     
    <p
      style="display: block;"
    >
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id 
    </p>
     
    <h4
      style="display: block;"
    >
      Eiusmod sint minim eu id consequat esse veniam.
    </h4>
     
    <p
      style="display: block;"
    >
      Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse
                    aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum
                    qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation
                    amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo.
                    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                    ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                    ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua
                    nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute.
                    Ut est cupidatat
    </p>
     
    <p
      style="display: block;"
    >
      mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate
                    occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo.
                    Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint
                    in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                    ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis
                    exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
                    sit sit commodo.
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Short Text 10 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    
                Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
                tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
                quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id consequat esse
                veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
                aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                minim eu id consequat esse veniam.
            
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    
                Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
                tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
                quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id consequat esse
                veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
                aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
                amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
                minim eu id consequat esse veniam.
            
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Text With Bold Text 2 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. 
      <b>
        Ullamco labore do sit sit commodo.
      </b>
      Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa 
      <b>
        voluptate occaecat veniam amet
      </b>
       reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation 
      <b>
        amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
      </b>
      
                sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                eu id consequat esse veniam.
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. 
      <b>
        Ullamco labore do sit sit commodo.
      </b>
      Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa 
      <b>
        voluptate occaecat veniam amet
      </b>
       reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation 
      <b>
        amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
      </b>
      
                sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                eu id consequat esse veniam.
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Text With Link 2 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
       voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
       ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
                sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                eu id consequat esse veniam
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
      .
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <p>
      Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
       voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id
                consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat
                mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
       ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
                irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint Lorem ipsum, dolor
                sit amet consectetur adipisicing elit. Aliquid voluptates a sapiente beatae odio architecto delectus repellat
                dolorem soluta accusamus. Ex, blanditiis illum explicabo quo mollitia nesciunt officiis facilis vero. minim
                eu id consequat esse veniam
                
      <a
        href="#"
      >
        Duis officia exercitation consequat ut.
      </a>
      .
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text Title 2 Lines 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <h2>
      Eiusmod runt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                Ullamco labore do sit sit commodo.
    </h2>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <h2>
      Eiusmod runt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor
                ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum
                ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
                Ullamco labore do sit sit commodo.
    </h2>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text With Raw Html Data 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    <p>
      <br />
    </p>
    <p />
    <p>
      Test rawhtml Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
            excepteur tempor ipsum qui
    </p>
    <p>
       eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
            do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
            aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
            irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
            esse veniam. Ullamco labore do sit sit 
    </p>
    <p>
      commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
            aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
            amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
            minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
            est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
            culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
            est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
            ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
            tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
            quis exercitation amet ad est sunt commodo. 
    </p>
    <p>
      Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
            sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
            anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
            laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
            Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
            Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
            irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
            esse veniam. Ullamco labore do sit sit commodo.
    </p>
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    <p>
      <br />
    </p>
    <p
      style="display: block;"
    />
    <p
      style="display: block;"
    >
      Test rawhtml Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
            excepteur tempor ipsum qui
    </p>
    <p
      style="display: block;"
    >
       eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
            do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
            aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
            irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
            esse veniam. Ullamco labore do sit sit 
    </p>
    <p
      style="display: block;"
    >
      commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
            aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
            amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
            minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
            est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
            culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
            est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
            ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
            tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
            quis exercitation amet ad est sunt commodo. 
    </p>
    <p
      style="display: block;"
    >
      Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
            sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
            anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
            laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
            Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
            Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
            irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
            esse veniam. Ullamco labore do sit sit commodo.
    </p>
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-text default 1`] = `
<div
  class="m-limit-text"
  style="position: relative;"
>
  <div
    aria-hidden="true"
    class="m-limit-text__original"
  >
    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
    excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
    sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
    do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
    aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
    aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
    est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
    culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
    est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
    ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
    tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
    quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
    sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
    anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
    laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
    Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo.
  </div>
   
  <div
    aria-hidden="true"
    class="m-limit-text__testing-text"
    style="white-space: normal;"
  >
    Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
    excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
    sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
    do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
    aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
    aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
    amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
    minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
    est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
    culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
    est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
    ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
    tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
    quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
    sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua
    anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa
    laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam.
    Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud.
    Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit
    irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat
    esse veniam. Ullamco labore do sit sit commodo.
  </div>
   
  <div
    class="m-limit-text__content"
    style="display: none;"
  />
   
  <!---->
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
</div>
`;
